UI Activation fixed

--- a/DesktopSearch.PS/UI/KeywordView.xaml
+++ b/DesktopSearch.PS/UI/KeywordView.xaml
@@ -5,7 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DesktopSearch.PS.UI"
              xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=DotNetProjects.Input.Toolkit" x:Class="DesktopSearch.PS.UI.KeywordView"
-             mc:Ignorable="d" IsTabStop="False" KeyboardNavigation.TabNavigation="Local"
+             mc:Ignorable="d" IsTabStop="False" 
+             KeyboardNavigation.TabNavigation="Local" KeyboardNavigation.ControlTabNavigation="Local"
              d:DesignHeight="300" d:DesignWidth="309.322">
     <Grid>
         <Grid.RowDefinitions>
@@ -15,7 +16,7 @@
 
         <ListView x:Name="KeywordsGrid" Margin="0,5,0,0" ItemsSource="{Binding Keywords}" DisplayMemberPath="Text" 
                   IsTabStop="True" TabIndex="10" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.CanContentScroll="False" 
-                  Grid.Row="1">
+                  Grid.Row="1" >
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
                     <WrapPanel Orientation="Horizontal" IsItemsHost="True" Focusable="True" />
@@ -28,10 +29,11 @@
         </ListView>
         <Controls:AutoCompleteBox x:Name="keywordsCombo" VerticalAlignment="Top" IsTextCompletionEnabled="True"
                                 ItemsSource="{Binding KeywordsList}" Text="{Binding KeywordToAdd, Mode=TwoWay}"
-                                TabIndex="1" IsTabStop="True">
-                <Controls:AutoCompleteBox.InputBindings>
-                    <KeyBinding Key="Return" Command="{Binding AddKeywordCommand}" />
-                </Controls:AutoCompleteBox.InputBindings>   
+                                TabIndex="9" IsTabStop="True" PreviewKeyDown="OnTextBoxKeyDown"
+                                  ToolTip="Hit Ctrl+Right to move to list of tags!">
+            <Controls:AutoCompleteBox.InputBindings>
+                <KeyBinding Key="Return" Command="{Binding AddKeywordCommand}" />
+            </Controls:AutoCompleteBox.InputBindings>
         </Controls:AutoCompleteBox>
 
     </Grid>
