--- a/DesktopSearch.PS/UI/TaggingDialog.xaml
+++ b/DesktopSearch.PS/UI/TaggingDialog.xaml
@@ -4,7 +4,6 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DesktopSearch.PS.UI"
-             xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:Tagging="clr-namespace:DesktopSearch.Core.Tagging;assembly=DesktopSearch.Core"
              xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
              xmlns:input="clr-namespace:System.Windows.Controls;assembly=DotNetProjects.Input.Toolkit"
@@ -13,13 +12,14 @@
              mc:Ignorable="d" KeyboardNavigation.TabNavigation="Continue"
              DataContext="{Binding TagDescriptor, RelativeSource={RelativeSource Self}}" 
              d:DataContext="{d:DesignInstance {x:Type local:TagViewModel}, IsDesignTimeCreatable=True}" 
-             ToolTip="Ctrl+Enter to submit." Height="289.474" Width="402.632" Activated="OnActivated">
+             ToolTip="Ctrl+Enter to submit." Height="289.474" Width="402.632">
     <Window.InputBindings>
-        <KeyBinding Key="Return" Modifiers="Ctrl" Command="ApplicationCommands.Close" />
+        <KeyBinding Key="Return" Modifiers="Ctrl" Command="{Binding CloseCommand}" CommandParameter="OK" />
     </Window.InputBindings>
-    <Window.CommandBindings>
-        <CommandBinding Command="ApplicationCommands.Close" Executed="OnCloseEx" />
-    </Window.CommandBindings>
+    <i:Interaction.Behaviors>
+        <local:CloseWindowBehavior CloseTrigger="{Binding CloseTrigger}" />
+    </i:Interaction.Behaviors>
+    <!--<command:EventToCommand--> 
     <Grid >
         <Grid.RowDefinitions>
             <RowDefinition Height="229*"/>
@@ -32,10 +32,15 @@
         <Label Content="Title" Margin="10,10,10,0" VerticalAlignment="Top" Height="26"/>
         <Label Content="Author" Margin="10,41,10,0" VerticalAlignment="Top" Height="26"/>
         <Label Content="Keywords" Margin="10,76,10,0" VerticalAlignment="Top" Height="26"/>
-        <TextBox x:Name="TitleText" Grid.Column="1" Height="23" Margin="10,10,10,0" TextWrapping="Wrap" Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" TabIndex="1"/>
+        <TextBox x:Name="TitleText" Grid.Column="1" Height="23" Margin="10,10,10,0" 
+                 TextWrapping="Wrap" Text="{Binding Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" 
+                 FocusManager.FocusedElement="{Binding RelativeSource={RelativeSource Self}}"
+                 VerticalAlignment="Top" TabIndex="1"/>
         <TextBox Grid.Column="1" Height="23" Margin="10,45,10,0" TextWrapping="Wrap" Text="{Binding Author, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Top" TabIndex="5"/>
-        <Button Content="OK" Grid.Column="1" Margin="0,10,93,10" Grid.Row="1" HorizontalAlignment="Right" Width="75" Command="ApplicationCommands.Close" TabIndex="15" />
-        <Button Content="Cancel" Grid.Column="1" Margin="0,10,10,10" Grid.Row="1" IsCancel="True" HorizontalAlignment="Right" Width="75" TabIndex="20"/>
+        <Button Content="OK" Grid.Column="1" Margin="0,10,93,10" Grid.Row="1" HorizontalAlignment="Right" Width="75" 
+                Command="{Binding CloseCommand}" CommandParameter="OK" TabIndex="15" />
+        <Button Content="Cancel" Grid.Column="1" Margin="0,10,10,10" Grid.Row="1" HorizontalAlignment="Right" Width="75" TabIndex="20"
+                Command="{Binding CloseCommand}" CommandParameter="Cancel"/>
         <local:KeywordView Grid.Column="1" Margin="10,79,10,10" 
                            IsTabStop="True" TabIndex="10"
                            DataContext="{Binding KeywordViewModel}"/>
